Ajuste no slider

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ aria-label="Toggle navigation"
             <a href="#" class="nav-link active primary-color" aria-current="page">Home</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link primary-color" >login</a>
+            <a href="#" class="nav-link primary-color" >Login</a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link primary-color">Cadastro</a>
@@ -316,9 +316,9 @@ aria-label="Toggle navigation"
                         </form>
                     </div> 
                     <div class="col-12 col-md-4" id="contact-container">
-                        <h4>formas de contato</h4>
+                        <h4>Formas de contato</h4>
                         <p class="#">(92)98282-2354</p>
-                        <p class="#">Imovo.espot@gmail.com</p>
+                        <p class="#">Imovii.espot@gmail.com</p>
                     </div>
                     <div class="col-12 col-md-4" id="links-container">
                         <div class="row">
