--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ aria-label="Toggle navigation"
                 <img src="img/esporte.jpg" alt="casa 1" class="d-block w-100" >
                 <div class="carousel-caption">
                     <h5>Inscreva-se </h5>
-                    <a href="#" class="btn btn-dark">Vizualizar projeto</a>
+                    <a href="#" class="btn btn-dark">Vizualizar projeto </a>
                 </div>
             </div>
             <div class="carousel-item ">
                 <img src="img/banner1.jpg" alt="casa 2" class="d-block w-100" >
                 <div class="carousel-caption">
                     <h5> Inscreva-se para competir.</h5>
-                    <a href="#" class="btn btn-dark">Vizualizar projeto</a>
+                    <a href="#" class="btn btn-dark">Vizualizar </a>
                 </div>
             </div>
             <div class="carousel-item ">
