FINALIZAÇÃO DO FOOTER

--- a/index.html
+++ b/index.html
@@ -334,7 +334,16 @@ aria-label="Toggle navigation"
                     </div>
                 </div>
             </div>
-            <div class="col-12" id="footer-bottom"></div>
+            <div class="col-12" id="footer-bottom">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-md-3">
+                        <p class="#">imovi &copy; 2021</p>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <p class="#">Ralizamos o seu projeto<i class="bi bi-heart"></i></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
