finalização no footer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <nav class="navbar navbar-expand-lg fixed-top bg-primary-color " id="navbar">
     <div class="container py-3">
 <a href="#" class="navbar-brand primary-color">
-    <img src="img/logo.png" alt="iMovi">
-<span>iMovi</span>
+    <img src="img/logo.png" alt="SeMova">
+<span>SeMova</span>
 </a>
 
 <button
@@ -340,7 +340,7 @@ aria-label="Toggle navigation"
                         <p class="#">imovi &copy; 2021</p>
                     </div>
                     <div class="col-12 col-md-3">
-                        <p class="#">Ralizamos o seu projeto<i class="bi bi-heart"></i></p>
+                        <p class="#">Realizamos o seu projeto<i class="bi bi-heart"></i></p>
                     </div>
                 </div>
             </div>
